venue page html prototype

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <tbody>
                 <tr>
                     <th scope="row">1</th>
-                    <td>Bella Napoli<span class="badge badge-pill badge-secondary">Neapolitan</span>
+                    <td><a href="venue.html"> Bella Napoli</a><span class="badge badge-pill badge-secondary">Neapolitan</span>
                     </td>
                     <td>4.6</td>
                 </tr>
@@ -161,12 +161,6 @@
         </div>
 
     </div>
-
-
-
-
-
-
 
 <!--<nav class="nav navbar fixed-bottom navbar-light bg-dark">-->
     <nav class="nav nav-pills fixed-bottom bg-dark nav-fill">
