--- a/venue.html
+++ b/venue.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="data/pizza4.jpeg" alt="Third slide">
+                    <img class="d-block w-100" src="data/pizza4.jpeg" alt="Fourth slide">
                     <div class="carousel-caption d-md-block">
                         <h5>Diavola</h5>
                         <p>Tomato, mozzarella, spicy salami, black olives</p>
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="data/pizza5.jpeg" alt="Third slide">
+                    <img class="d-block w-100" src="data/pizza5.jpeg" alt="Fifth slide">
                     <div class="carousel-caption d-md-block">
                         <h5>Diavola</h5>
                         <p>Tomato, mozzarella, spicy salami, black olives</p>
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="data/pizza6.jpeg" alt="Third slide">
+                    <img class="d-block w-100" src="data/pizza6.jpeg" alt="Sixth slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Diavola</h5>
                         <p>Tomato, mozzarella, spicy salami, black olives</p>
