--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>shpr</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<!doctype html>
+<html lang="en">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="custom.css">
+  <script defer src="/static/fontawesome-all.min.js"></script>
+
+  <title>上海 Pizza Reviews</title>
+</head>
+<body>
+
+<div id="app"></div>
+
+</body>
 </html>
