--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-oi8o31xSQq8S0RpBcb4FaLB8LJi9AT8oIdmS1QldR8Ui7KUQjNAnDlJjp55Ba8FG" crossorigin="anonymous">
 
-  <script defer src="/static/fontawesome-all.min.js"></script>
 
   <title>上海 Pizza Reviews</title>
 </head>
